--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^4.0.3"
+  },
+  "dependencies": {
+    "request": "^2.88.0"
   }
 }
